--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra.tmpl
@@ -16,7 +16,7 @@
             if (!verificarRespuesta(responseText))
                 return(0);
             $('#novedades_intra_ajax').html(responseText);
-            zebra('datos_tabla');
+            //zebra('datos_tabla');
     }
 
 
@@ -39,7 +39,7 @@
             if (!verificarRespuesta(responseText))
                 return(0);
             $('#novedades_intra_ajax').html(responseText);
-            zebra('datos_tabla');
+            //zebra('datos_tabla');
     }
     
 
