--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -31,7 +31,7 @@
         <div class="contenedor_paginador">[% paginador %]</div>
         <div class="datos_tabla_div_user">
             <div class="resultados_consulta">[% "La cantidad de mensajes es" | i18n %]: [% cant_mensajes %]</div>
-            <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0 width=100%>
+            <table id="tablaResult" class="table table-striped">
                 <thead>
                 <tr class="titulo_tabla_resultado">
                     <th>[% "Fecha" | i18n %]</th>
