--- a/intranet/htdocs/intranet-tmpl/admin/global/estilosResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/estilosResultConfig.tmpl
@@ -1,7 +1,7 @@
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend">[% "Preferencias de Estilos" | i18n %]</legend>
     <div class="tablaResultado_preferencias" id="tablaResultado_preferencias" >
-        <table name="tablaResult" class="datos_tabla" cellspacing="0" cellpadding="0" border="0" width="100%">
+        <table name="tablaResult" class="table table-striped" cellspacing="0" cellpadding="0" border="0" width="100%">
             <thead>
                 <tr class="titulo_tabla_resultado">
                     <th width="13%">[% "Variable" | i18n %]</th>
