--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -13,7 +13,7 @@
         [% IF novedades %]
             <div class="datos_tabla_div_user">
                 <div class="resultados_consulta">[% "La cantidad de novedades es" | i18n %]: [% cant_novedades %]</div>
-                <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0 width=100%>
+                <table id="tablaResult" class="table table-striped">
                     <thead>
                         <tr class="titulo_tabla_resultado">
                             <th>[% "Fecha" | i18n %]</th>
