--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -4582,3 +4582,11 @@ margin: 0 auto;
     0%{-webkit-transform: scale(1.2);opacity:1;}
     100%{-webkit-transform: scale(0.7);opacity:0.1;}
 }
+.novedad_contacto {
+    min-width: 500px;
+    background-color:#E6E6DD;
+}
+.msj_contacto{
+    min-width: 500px;
+    background-color:#E6E6DD;
+}
