--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -104,7 +104,7 @@ $(document).ready( function() {
 
 <div id="datos_esquema" class="modal fade hide">
 	<!-- <div id="datos_esquema"> -->
-    <form class="well form-horizontal">
+    <form class="well form-horizontal" onsubmit="return false;">
 	    <legend class="titulo_legend">[% "Datos del esquema" | i18n %]</legend>
 	        <div class="control-group">
 	            <label for="tipo_nivel3_id">
