--- a/intranet/htdocs/intranet-tmpl/about/about.tmpl
+++ b/intranet/htdocs/intranet-tmpl/about/about.tmpl
@@ -50,7 +50,7 @@ function updateEdit(responseText){
          <dd>Miguel Carbone</dd>
          <dd>Gaspar Rajoy</dd>
          <dd>Magal&iacute; Defalco</dd>
-         <dd>Francisco Raposeiras</dd>
+         <dd>J. Francisco Raposeiras</dd>
     </div>
     <div>
          <dt><a href="http://www.econo.unlp.edu.ar" target="_blank">Facultad de Ciencias Econ&oacute;micas</a></dt>
