--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -30,7 +30,7 @@
     <legend class="titulo_legend trigger click">[% "Mensajes de Contacto" | i18n %]:</legend>
         <div class="contenedor_paginador">[% paginador %]</div>
         <div class="datos_tabla_div_user">
-            <div class="resultados_consulta">[% "La cantidad de mensajes es" | i18n %]: [% cant_mensajes %]</div>
+            <div class="alert alert-info">[% "La cantidad de mensajes es" | i18n %]: [% cant_mensajes %]</div>
             <table id="tablaResult" class="table table-striped">
                 <thead>
                 <tr class="titulo_tabla_resultado">
