--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
@@ -12,7 +12,7 @@
         <div class="contenedor_paginador">[% paginador %]</div>
         [% IF novedades %]
             <div class="datos_tabla_div_user">
-                <div class="resultados_consulta">[% "La cantidad de novedades es" | i18n %]: [% cant_novedades %]</div>
+                <div class="alert alert-info">[% "La cantidad de novedades es" | i18n %]: [% cant_novedades %]</div>
                 <table id="tablaResult" class="table table-striped">
                     <thead>
                         <tr class="titulo_tabla_resultado">
