--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_importaciones.tmpl
@@ -68,11 +68,13 @@
                       <td align='left' width="9%" >
 					  <div class="detalle_importacion">
 						      [% PERL %]
-                               print C4::AR::Filtros::action_group_link_button(    
+                               print C4::AR::Filtros::action_set_button(
+									title           => "[% 'Importaci&oacute;n' | i18n %]",
+                                    button          => 'btn btn-primary',   
                                     actions         => [
-										{icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
-                                        {icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/importarDB.pl", params =>   ["tipoAccion=EDITAR", "id_importacion=[% importacion.getId %]"]},
-                                        {action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove", class=>"btn-danger"},
+										{title => "Detalle",icon=>"icon-search",url=>"[% url_prefix %]/herramientas/importacion/detalle_importacion.pl", params =>   ["id_importacion=[% importacion.getId %]"]},
+                                        {title => "Editar",icon=>"icon-pencil",url=>"[% url_prefix %]/herramientas/importacion/importarDB.pl", params =>   ["tipoAccion=EDITAR", "id_importacion=[% importacion.getId %]"]},
+                                        {title => "Borrar",action=>"borrarImportacion([% importacion.getId %]);", icon=>"icon-remove"},
                                                        ],
 								);
                               [% END %]
